[gd_scene load_steps=5 format=3 uid="uid://31nvausgd6ei"]

[ext_resource type="Script" uid="uid://c2xk5mvh12rb2" path="res://scripts/lingering_effects/falling_icicle.gd" id="1_ge0es"]
[ext_resource type="Texture2D" uid="uid://580sa1vub3uy" path="res://sprites/white_circle.png" id="2_437ec"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7vddw"]
radius = 57.63

[sub_resource type="CircleShape2D" id="CircleShape2D_pnavm"]
radius = 48.1

[node name="EnemyFallingIcicle" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_ge0es")
fall_speed = 600.0

[node name="WarningHitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7vddw")

[node name="WarningSprite" type="Sprite2D" parent="."]
modulate = Color(0.9490196, 0, 0.22352941, 0.41568628)
scale = Vector2(0.19, 0.19)
texture = ExtResource("2_437ec")

[node name="IcicleSprite" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_437ec")

[node name="FallenIcicle" type="StaticBody2D" parent="IcicleSprite"]
process_mode = 4
scale = Vector2(6.25, 6.25)

[node name="IcicleHitbox" type="CollisionShape2D" parent="IcicleSprite/FallenIcicle"]
shape = SubResource("CircleShape2D_pnavm")
